--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h1>List of topics</h1>
         <section>
         <li><a href="#VPN">VPN</a></li>
+        <li><a href="#CompTIA  A+ Training">CompTIA  A+ Training</a></li>
         </section>
 
         <section>
@@ -36,6 +37,13 @@
             <li>Paid VPNs will not log user’s activity on the internet and will keep it private.</li>
         </ul>
         </section>
+        <section>
+            <h2 id="CompTIA  A+ Training">CompTIA  A+ Training</h2>
+            <ul>
+            <h4><li>Laptop Hardware</li></h4>
+            </ul>
+        </section>
+
 
 
     </body>
