--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
             <h2 id="CompTIA  A+ Training">CompTIA  A+ Training</h2>
             <ul>
             <h4><li>Laptop Hardware</li></h4>
+                <p>Engineered to precise specifications</p>
+                <li>A challenging repair</li>
+                <p>Some laptops are easier to fix than others </p>
+                <li>An ongoing learning process</li>
             </ul>
         </section>
 
