--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
                 <li>A challenging repair</li>
                 <p>Some laptops are easier to fix than others </p>
                 <li>An ongoing learning process</li>
+                <p>Understand the process</p>
+                <li>The details will vary between the manufacturers</li>
             </ul>
         </section>
 
