--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <h3 id="Laptop Displays">Laptop Displays</h3>
             
             <ul>
-                <h4>Portable LCD</h4>
+            <h4>Portable LCD</h4>
                 <p>Liquid crystal display</p>
                 <li>Light shines through liquid crystals</li>
 
@@ -218,6 +218,35 @@
                 <li>Requires separate backlight: 
                     - Florescent, LED, etc.
                     - Lights are difficult to replace</li>
+
+            <h4>LCD technologies</h4>
+                <p>TN (Twisted Nematic) LCD</p>
+                <li>The original LCD technology</li>
+                <li>Fast response times (gaming!)</li>
+                <li>Poor viewing angles - colors shifts</li>
+
+                <p>IPS (In Plane Switching) LCD</p>
+                <li>Excellent color representation</li>
+                <li>More expensive to produce than TN</li>
+
+                <p>VA (Vertical Alignment) LCD</p>
+                <li>A  good compromise between TN and IPS</li>
+                <li>Good color representation</li>
+                <li>Slower response times than TN</li>
+
+            <h4>OLED</h4>
+                <p>Organic Light Emitting Diode</p>
+                <li>Organic compound emits light when receiving an electric current</li>
+
+                <p>Thinner and lighter</p>
+                <li>Flexible and mobile - no glass needed</li>
+
+                <p>No backlight</p>
+                <li>The organic compound provides the light</li>
+
+                <p>Tablets, phones, smart watches</p>
+                <li>Very accurate color representation</li>
+                <li>A bit higher cost than LCD</li>
             </ul>
         </section>
         <br>
