--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <body>
         <h1>List of topics</h1>
         <section>
-        <li><a href="#VPN">VPN</a></li>
-        <li><a href="#CompTIA  A+ Training">CompTIA  A+ Training</a></li>
+        <a href="#VPN">VPN</a>
+
+        <ul>
+        <a href="#CompTIA  A+ Training">CompTIA  A+ Training</a>
+            <li><a href="#Laptop Hardware">Laptop Hardware</a></li>
+            <li><a href="#Laptop Displays">Laptop Displays</a></li>
+        </ul>
         </section>
         
         <br>
@@ -247,6 +252,36 @@
                 <p>Tablets, phones, smart watches</p>
                 <li>Very accurate color representation</li>
                 <li>A bit higher cost than LCD</li>
+
+                <h4>Wi-Fi antennas</h4>
+                <p>Multiple antennas</p>
+                <li>WiFi main and aux</li>
+                <li>Bluetooth</li>
+
+                <p>Antenna wires wrap around the laptop screen</p>
+                <li>It's up high!</li>
+            
+            <h4>Webcam</h4>
+                <p>Video capture</p>
+                <li>Built-in camera and microphone</li>
+
+                <p>Usually includes both audio and video</p>
+                <li>Special drivers and software</li>
+
+            <h4>Microphone</h4>
+                <p>Built-in to the laptop display</p>
+                <li>Useful for video calls</li>
+
+                <p>Not good for non-casual use</p>
+                <li>Analog or USB microphones can help</li>
+
+            <h4>Fluorescent vs. LED backlighting</h4>
+                <p>CCFL- Cold Cathode Fluorescent Lamp</p>
+                <li>Higher voltage and power needed</li>
+                <li>Added thickness to the display</li>
+                <li>No longer a common backlight</li>
+                <li>Older laptops will use these</li>
+
             </ul>
         </section>
         <br>
