--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <h1>List of topics</h1>
         <section>
-        <a href="#VPN">VPN</a>
+        <li><a href="#VPN">VPN</a></li>
 
-        <a href="#CompTIA  A+ Training">CompTIA  A+ Training</a>
+        <li><a href="#CompTIA  A+ Training">CompTIA  A+ Training</a></li>
         <ul>    
             <li><a href="#Laptop Hardware">Laptop Hardware</a></li>
             <li><a href="#Laptop Displays">Laptop Displays</a></li>
@@ -281,6 +281,8 @@
                 <li>Added thickness to the display</li>
                 <li>No longer a common backlight</li>
                 <li>Older laptops will use these</li>
+
+                
 
             </ul>
         </section>
