--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
         <br>
         <section>
             <p>All the information are just notes for particullar topics. They are comming from different sources.</p>
-            <ul><h4>List of sources</h4></ul>
+            <h4>List of sources</h4>
                 <li><a href="https://www.professormesser.com/" target="_blank" rel="noopener noreferrer">Professor Messer</a></li>
         </section>
 
